--- a/Movie-stream/src/components/TitleCards/TitleCards.css
+++ b/Movie-stream/src/components/TitleCards/TitleCards.css
@@ -16,7 +16,7 @@
 }
 
 .card-list img{
-    width:200px;
+    width:150px;
     height: 150px;
     border-radius: 4px;
     cursor: pointer;
@@ -32,3 +32,32 @@
     text-decoration: none;
     color: #fff;
 }
+
+@media screen and (max-width: 800px){
+    .title-cards{
+        margin-top: 20px;
+        margin-bottom: 0;
+    }
+    .title-cards h2{
+        font-size: 20px;
+    }
+    .card-list img{
+        width: 200px;
+    }
+    .card-list p{
+      font-size: 12px;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .title-cards h2{
+        font-size: 15px;
+    }
+    .card-list img{
+        width: 165px;
+    }
+    .card-list p{
+      font-size: 10px;
+    }
+}
+
