--- a/Movie-stream/src/pages/Home/Home.css
+++ b/Movie-stream/src/pages/Home/Home.css
@@ -17,7 +17,7 @@
     width: 350px;
 }
 
-.caption img{
+.caption-img{
     width: 90%;
     max-width: 420px;
     margin-bottom: 30px;
@@ -68,4 +68,48 @@
 .more-cards{
     padding-left: 6%;
     
+}
+
+@media screen and (max-width:1024px){
+    .hero-caption .title-cards{
+        display: none;
+
+    }
+    .hero-btns{
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width:800px){
+
+.hero-caption{
+    padding-left: 4%;
+}
+.hero-caption img{
+    margin-bottom: 10px;
+    width: 30%;
+}
+  .hero-btns .btn img{
+    width: 10px;
+  }
+  .more-cards{
+    padding-left: 4%;
+  }
+}
+
+@media screen and (max-width:500px){
+
+.caption-img{
+    width: 15%;
+}
+.hero-btns .btn img{
+    width: 15px;
+}
+.hero-btns .btn{
+    padding: 4px 10px;
+    gap: 5px;
+    font-size: 10px;
+
+}
+
 }
