--- a/Movie-stream/src/pages/Login/Login.css
+++ b/Movie-stream/src/pages/Login/Login.css
@@ -1,5 +1,5 @@
 .login{
-    height: 100vh;
+    height:100vh;
     background-image: linear-gradient(#0000007e,#0000007e),url(/backbanner.jpg);
     padding: 20px 8%;
 }
@@ -80,4 +80,26 @@
     color: #fff;
     font-weight: 500;
     cursor: pointer;
+}
+
+.loading-spinner{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.loading-spinner img{
+    width: 60px;
+}
+
+@media (max-width: 500px){
+    .login{
+        padding: 15px 5%;
+    }
+    .login-form{
+        padding: 20px;
+        margin-top: 30px;
+    }
 }
