--- a/Movie-stream/src/pages/Player/Player.css
+++ b/Movie-stream/src/pages/Player/Player.css
@@ -23,3 +23,21 @@
     justify-content: space-between;
     width: 90%;
 }
+
+.video-container {
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.video-element {
+  width: 100%;
+  height: auto;
+  max-height: 90vh;
+  object-fit: contain;
+}
+
+
