--- a/Movie-stream/src/components/TitleCards/TitleCards.css
+++ b/Movie-stream/src/components/TitleCards/TitleCards.css
@@ -8,7 +8,7 @@
 .card-list{
     display: flex;
     gap: 10px;
-    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 .card-list::-webkit-scrollbar{
